<resources>
    <string name="app_name">RIKOD MY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="open_file">Open File</string>
    <string name="send_file">Send File</string>
    <string name="logo">Logo</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="finance">FINANCE</string>
    <string name="ledger">LEDGER</string>
    <string name="cart">CART</string>
    <string name="purchase">EXPENSES</string>
    <string name="title_purchase">Expenses</string>
    <string name="petty_cash">PETTY CASH</string>
    <string name="title_petty_cash">Petty Cash</string>
    <string name="title_finance">Finance</string>
    <string name="title_ledger">Ledger</string>
    <string name="title_history">History</string>
    <string name="history">HISTORY</string>
    <string name="customer">CUSTOMER</string>
    <string name="file_result">FILE RESULT</string>
    <string name="title_customer">Customer</string>
    <string name="profile">PROFILE</string>
    <string name="title_profile">Profile</string>
    <string name="title_name">Name</string>
    <string name="title_debit">Petty Cash</string>
    <string name="title_credit">Expenses</string>

    <string name="title_name_product">Name product</string>
    <string name="title_phone">60234</string>
    <string name="title_note">note</string>
    <string name="title_price_product">RM 100</string>
    <string name="title_stock">Stock</string>
    <string name="title_date">01–01–2020</string>
    <string name="title_image_product">Image Product</string>
    <string name="title_image_currency">Image Currency</string>
    <string name="title_product">Product</string>
    <string name="title_kategori">Kategori</string>
    <string name="title_qty">Qty</string>

    <string name="title_search">Search here</string>
    <string name="stock">Stock %1$s</string>
    <string name="stock_empty">Out of Stock</string>
    <string name="total_payment">Total Payment</string>
    <string name="total">Total %1$s</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="reason">Reason</string>
    <string name="reason_required">Reason required</string>
    <string name="change">CHANGE</string>
    <string name="payment_item">Payment item %1$s</string>
    <string name="qty">Qty %1$s</string>
    <string name="phone">phone: %1$s</string>
    <string name="email_required">Email required</string>
    <string name="choose_image">Choose Image</string>
    <string name="password_required">Password required</string>
    <string name="no_auth">Email or password invalid</string>
    <string name="invalid_email">Invalid email</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="error_writing_bitmap">Error writing bitmap</string>
    <string name="success_save_purchase">Save purchase success</string>
    <string name="success_save_customer">Save customer success</string>
    <string name="success_save_petty_cash">Save petty cash success</string>
    <string name="image_required">Image required</string>
    <string name="id_not_found">Id user not found</string>
    <string name="purchase_required">Purchase required</string>
    <string name="petty_cash_required">Petty Cash required</string>
    <string name="note_required">Note required</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer phone</string>
    <string name="customer_email">Customer email</string>
    <string name="customer_address">Customer address</string>
    <string name="address_required">Address required</string>
    <string name="phone_required">Phone required</string>
    <string name="name_required">Name required</string>
    <string name="id_company_required">Id company not found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="minus">-</string>
    <string name="success_add_to_cart">Success add to cart</string>
    <string name="delete_from_cart">Delete from cart</string>
    <string name="update_cart">Update cart</string>
    <string name="success_update_cart">Update cart success</string>
    <string name="success_delete_cart">Delete cart success</string>
    <string name="message">Message</string>
    <string name="back_to_list">Back to list</string>
    <string name="search_customer">Search customer</string>
    <string name="print">Print</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="success_checkout">Success Checkout</string>
    <string name="error">Error</string>
    <string name="back_to_home">Back to Home</string>
    <string name="application_not_found">Aplikasi untuk membuka file tidak ada di perangkat ini</string>
    <string name="all_product">All Product</string>
    <string name="cash_in_hand">Cash in Hand</string>
    <string name="transfer_label">Transfer</string>
    <string name="unpaid_label">Unpaid</string>

    <string name="rm">RM100.00</string>
    <string name="required">Required</string>
    <string name="empty_format_report">Format image report not found</string>
    <string name="empty_report">Image report not found</string>
    <string name="empty_sign">Image signature not found</string>
    <string name="empty_format_sign">Format image signature not found</string>
    <string name="empty_data_transaction">Data transaction not found</string>
    <string name="empty_detail_transaction">Detail transaction not found</string>
    <string name="empty_customer">Customer has not been selected</string>
    <string name="cash">CASH</string>
    <string name="transfer">TRANSFER</string>
    <string name="paylater">UNPAID</string>
    <string name="paynow">Pay Now</string>
    <string name="void_sales">Void Sales</string>
    <string name="image_report_signature_required">Image report and signature required</string>
    <string name="code">#%1$s</string>
    <string name="detail">Detail</string>
    <string name="payment_success">Payment is successful</string>
    <string name="submit_reason">Submit Reason</string>
    <string name="success_void">Success void transaction</string>
    <string name="confirmation">Confirmation</string>
    <string name="ask_quotation">Do you want to make quotation ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="go_to_payment">GO TO PAYMENT</string>
    <string name="quotation">QUOTATION</string>
    <string name="reject">Reject</string>
    <string name="invoice">Invoice</string>
    <string name="reject_quotation">Success reject quotation</string>
    <string name="cod">C.O.D</string>
    <string name="image_and_signature_not_required">Image and Signature Not Required</string>
    <string name="if_you_forgot_your_password_please_contact_your_admin_company_to_change_password_immediately">If you forgot your password please contact your admin company to change password immediately</string>
    <string name="before_you_can_login_nyou_must_b_register_b_your_company_first">Before you can login,</string>
    <string name="you_must_b">You must </string>
    <string name="register">REGISTER </string>
    <string name="your_company_first">your company first</string>

</resources>