<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_finance"
        android:enabled="true"
        android:icon="@drawable/ic_finance"
        android:title="@string/title_ledger" />

    <item
        android:id="@+id/navigation_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_customer"
        android:enabled="true"
        android:icon="@drawable/ic_customer"
        android:title="@string/title_customer" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>