<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size2"
            android:textStyle="bold"
            android:textColor="@color/darkGray"
            android:text="@string/choose_payment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size2"
            android:layout_marginBottom="@dimen/size3"
            android:gravity="center">

            <Button
                android:id="@+id/btnCash"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:background="@drawable/background_smooth_blue_transparent"
                android:text="@string/cash"/>

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="85dp"
                android:background="@drawable/background_smooth_blue_transparent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:text="@string/transfer"/>

            <Button
                android:id="@+id/btnPayLater"
                android:layout_width="85dp"
                android:background="@drawable/background_smooth_blue_transparent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAllCaps="false"
                android:text="@string/cod"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
