<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size10"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="169dp"
        android:layout_height="98dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size8"
        android:contentDescription="@string/logo"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/rikod_icon" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_below="@+id/imageViewLogo"
        android:layout_marginTop="@dimen/size15"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/border_light_gray"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="30dp"
            android:padding="@dimen/size2"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/font2" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size5"
            android:autofillHints=""
            android:background="@drawable/border_light_gray"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="30dp"
            android:padding="@dimen/size2"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/font2" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size9"
            android:background="@drawable/button_smooth_blue"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textStyle="italic"
            android:textSize="13sp"
            android:textColor="@color/blue"
            android:text="@string/if_you_forgot_your_password_please_contact_your_admin_company_to_change_password_immediately"/>

        <TextView
            android:id="@+id/textVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:text="Version 2.0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/before_you_can_login_nyou_must_b_register_b_your_company_first"/>

        <View
            android:layout_width="122dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/holo_orange_dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/you_must_b"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/register"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/your_company_first"/>

        </LinearLayout>

        <View
            android:layout_width="230dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/holo_orange_dark"/>

    </LinearLayout>


</RelativeLayout>