<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewPhoto"
        android:layout_width="@dimen/size10"
        android:layout_height="@dimen/size10"
        android:layout_marginStart="@dimen/size2"
        android:layout_marginTop="@dimen/size2"
        android:contentDescription="@string/title_image_product" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/imageViewPhoto"
        android:layout_marginTop="@dimen/size3"
        android:background="@color/lightGray" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size3"
        android:layout_marginTop="@dimen/size2"
        android:layout_toEndOf="@id/imageViewPhoto"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size1"
            android:text="@string/title_phone"
            android:textColor="@color/lightGray"
            android:textSize="@dimen/font" />

    </LinearLayout>

</RelativeLayout>