<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.customer.PostCustomerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:layout_marginStart="@dimen/size2"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="@dimen/size10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_upload"
                android:padding="@dimen/size5"
                android:src="@drawable/ic_camera" />

            <EditText
                android:id="@+id/editTextCustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size11"
                android:layout_marginTop="@dimen/size8"
                android:layout_marginEnd="@dimen/size11"
                android:autofillHints=""
                android:background="@drawable/border_light_gray"
                android:hint="@string/customer_name"
                android:minHeight="30dp"
                android:padding="@dimen/size2"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font2" />

            <EditText
                android:id="@+id/editTextCustomerTelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size11"
                android:layout_marginTop="@dimen/size5"
                android:layout_marginEnd="@dimen/size11"
                android:autofillHints=""
                android:background="@drawable/border_light_gray"
                android:hint="@string/customer_phone"
                android:inputType="phone"
                android:minHeight="30dp"
                android:padding="@dimen/size2"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font2" />

            <EditText
                android:id="@+id/editTextCustomerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size11"
                android:layout_marginTop="@dimen/size5"
                android:layout_marginEnd="@dimen/size11"
                android:autofillHints=""
                android:background="@drawable/border_light_gray"
                android:hint="@string/customer_email"
                android:inputType="textEmailAddress"
                android:minHeight="30dp"
                android:padding="@dimen/size2"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font2" />

            <EditText
                android:id="@+id/editTextCustomerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size11"
                android:layout_marginTop="@dimen/size5"
                android:layout_marginEnd="@dimen/size11"
                android:autofillHints=""
                android:background="@drawable/border_light_gray"
                android:gravity="start"
                android:hint="@string/customer_address"
                android:minHeight="@dimen/size18"
                android:padding="@dimen/size2"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/font2" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/smoothBlue"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font2" />

</RelativeLayout>